--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a simple todo list of using es6 webpack mocha and jasmine",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine",
+    "build": "webpack",
+    "start": "http-server"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "jasmine": "^2.4.1",
     "webpack": "^1.13.0"
   }
 }
