--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "todolist-es6",
   "version": "1.0.0",
-  "description": "a simple todo list of using es6 webpack mocha and jasmine",
+  "description": "a simple todo list of using es6 webpack mocha and chai",
   "main": "index.js",
   "scripts": {
-    "test": "jasmine",
+    "eslint": "eslint src/*.js",
     "build": "webpack",
     "start": "http-server"
   },
@@ -17,7 +17,8 @@
     "es6",
     "webpack",
     "mocha",
-    "jasmine"
+    "chai",
+    "eslint"
   ],
   "author": "yancey",
   "license": "MIT",
@@ -27,9 +28,19 @@
   "homepage": "https://github.com/JavaScriptAcademy/todoList-es6#readme",
   "devDependencies": {
     "babel-core": "^6.8.0",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "jasmine": "^2.4.1",
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-import": "^1.8.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.1.1",
     "webpack": "^1.13.0"
+  },
+  "dependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
   }
 }
