add new todo, filter todo by completation, toggle todo status, clear completed todos

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "eslint": "eslint src/*.js",
     "test": "mocha --compilers js:babel-register ./test/*/*.spec.js",
     "start": "http-server",
-    "build": "webapck"
+    "build": "webpack -w"
   },
   "repository": {
     "type": "git",
