--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "eslint": "eslint src/*.js",
     "test": "mocha --compilers js:babel-register ./test/*/*.spec.js",
-    "start": "http-server",
+    "start": "npm run eslint && npm run test && webpack && http-server",
     "build": "webpack -w"
   },
   "repository": {
